force-app/main/default/objects/Certification__c/fields/Certificate_Image__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Image__c</fullName>
    <label>Certificate Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>