force-app/main/default/objects/Certification__c/fields/Certification_Url__c.field-meta.xml
<CustomField>
    <fullName>Certification_Url__c</fullName>
    <label>Certification Url</label>
    <type>Url</type>
</CustomField>