force-app/main/default/objects/Certification__c/fields/Is_Salesforce_Certification__c.field-meta.xml
<CustomField>
    <fullName>Is_Salesforce_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Salesforce Certification</label>
    <type>Checkbox</type>
</CustomField>